--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,31 @@
 backend/node_modules
+frontend/node_modules
 backend/static
+frontend/dist
+frontend/dev-dist
 backend/tasks
 backend/config
-frontend/node_modules
-frontend/dist
+.env
+.env.*
+*.env
+backend/.env
 frontend/.env
-frontend/dev-dist
+autoschedule/.env
+autoschedule/**/.env
+!.env.example
+!*.env.example
+*_secret*
+*_secrets*
+secrets/*
+!secrets/*.example
+credentials.json
+*.key
+*.pem
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+dist/
+*.egg-info/
